Repositioned suctioncups for toes, corrected spacing

--- a/01-responsive-web-design/03-crawling-gecko/styles.css
+++ b/01-responsive-web-design/03-crawling-gecko/styles.css
@@ -218,13 +218,24 @@ body, html {
     top: -80%;
     left: 10%;
     background: var(--gecko-body);
-    border-radius: 40%;
-    width: 1.5vw;
-    height: 1.5vw;
+    border-radius: 60% 60% 50% 50%;
+    width: 1.4vw;
+    height: 1.4vw;
     transform-origin: bottom center;
     transform: rotate(90deg);
-    box-shadow: -3vw -0.5vw 0 0 var(--emerald-green), -2vw -1.5vw 0 0 var(--emerald-green), -0.75vw -2vw 0 0 var(--emerald-green), 0.75vw -2vw 0 0 var(--emerald-green), 2vw -1.5vw 0 0 var(--emerald-green);
+    box-shadow: -3vw 0vw 0 0 var(--lime-green), 
+                -2.1vw -2.1vw 0 0 var(--lime-green), 
+                0vw -3vw 0 0 var(--lime-green), 
+                2.1vw -2.1vw 0 0 var(--lime-green), 
+                3vw -0.1vw 0 0 var(--lime-green),
+
+                -3vw 0vw 0 0.2vw var(--forest-green),
+                -2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                0vw -3vw 0 0.2vw var(--forest-green),
+                2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                3vw -0.1vw 0 0.2vw var(--forest-green);
 }
+
 .front-right-foot {
     position: absolute;
     top: -80%;
@@ -235,7 +246,17 @@ body, html {
     height: 1.5vw;
     transform-origin: bottom center;
     transform: rotate(-90deg);
-    box-shadow: 3vw -0.5vw 0 0 var(--emerald-green), 2vw -1.5vw 0 0 var(--emerald-green), 0.75vw -2vw 0 0 var(--emerald-green), -0.75vw -2vw 0 0 var(--emerald-green), -2vw -1.5vw 0 0 var(--emerald-green);
+    box-shadow: -3vw 0vw 0 0 var(--lime-green), 
+                -2.1vw -2.1vw 0 0 var(--lime-green), 
+                0vw -3vw 0 0 var(--lime-green), 
+                2.1vw -2.1vw 0 0 var(--lime-green), 
+                3vw -0.1vw 0 0 var(--lime-green),
+
+                -3vw 0vw 0 0.2vw var(--forest-green),
+                -2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                0vw -3vw 0 0.2vw var(--forest-green),
+                2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                3vw -0.1vw 0 0.2vw var(--forest-green);
 }
 .back-left-foot {
     position: absolute;
@@ -247,7 +268,17 @@ body, html {
     height: 1.5vw;
     transform-origin: bottom center;
     transform: rotate(90deg);
-    box-shadow: -3vw -0.5vw 0 0 var(--emerald-green), -2vw -1.5vw 0 0 var(--emerald-green), -0.75vw -2vw 0 0 var(--emerald-green), 0.75vw -2vw 0 0 var(--emerald-green), 2vw -1.5vw 0 0 var(--emerald-green);
+    box-shadow: -3vw 0vw 0 0 var(--lime-green), 
+                -2.1vw -2.1vw 0 0 var(--lime-green), 
+                0vw -3vw 0 0 var(--lime-green), 
+                2.1vw -2.1vw 0 0 var(--lime-green), 
+                3vw -0.1vw 0 0 var(--lime-green),
+
+                -3vw 0vw 0 0.2vw var(--forest-green),
+                -2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                0vw -3vw 0 0.2vw var(--forest-green),
+                2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                3vw -0.1vw 0 0.2vw var(--forest-green);
 }
 .back-right-foot {
     position: absolute;
@@ -259,5 +290,15 @@ body, html {
     height: 1.5vw;
     transform-origin: bottom center;
     transform: rotate(-90deg);
-    box-shadow: 3vw -0.5vw 0 0 var(--emerald-green), 2vw -1.5vw 0 0 var(--emerald-green), 0.75vw -2vw 0 0 var(--emerald-green), -0.75vw -2vw 0 0 var(--emerald-green), -2vw -1.5vw 0 0 var(--emerald-green);
+    box-shadow: -3vw 0vw 0 0 var(--lime-green), 
+                -2.1vw -2.1vw 0 0 var(--lime-green), 
+                0vw -3vw 0 0 var(--lime-green), 
+                2.1vw -2.1vw 0 0 var(--lime-green), 
+                3vw -0.1vw 0 0 var(--lime-green),
+
+                -3vw 0vw 0 0.2vw var(--forest-green),
+                -2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                0vw -3vw 0 0.2vw var(--forest-green),
+                2.1vw -2.1vw 0 0.2vw var(--forest-green),
+                3vw -0.1vw 0 0.2vw var(--forest-green);
 }
